# resturant-review-system

./: .gitignore  .openhands_instructions  README.md  pyproject.toml  test.py
.github/workflows/: openhands_review.yml
backend/: package-lock.json  package.json
backend/nlp_service/: main.py  requirements.txt
backend/scripts/: seed_data.js
backend/src/: middleware.ts
backend/src/app/: page.tsx
backend/src/app/api/leaderboard/: route.ts
backend/src/app/api/reviews/: route.ts
frontend/: README.md  pubspec.yaml
frontend/android/app/: build.gradle
frontend/android/app/src/main/: AndroidManifest.xml
frontend/ios/Runner/: Info.plist
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: main.dart
frontend/lib/models/: restaurant.dart  review.dart
frontend/lib/routes/: app_router.dart
frontend/lib/screens/: home_screen.dart  leaderboard_screen.dart  login_screen.dart  profile_screen.dart  restaurant_details_screen.dart
frontend/lib/services/: api_service.dart
frontend/lib/theme/: app_theme.dart
frontend/lib/widgets/: restaurant_card.dart
frontend/linux/: CMakeLists.txt
frontend/linux/runner/: my_application.cc
frontend/macos/Runner.xcodeproj/: project.pbxproj
frontend/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
frontend/macos/Runner/Configs/: AppInfo.xcconfig
frontend/test/: widget_test.dart
frontend/web/: index.html  manifest.json
frontend/windows/: CMakeLists.txt
frontend/windows/runner/: Runner.rc  main.cpp
tests/: test_validation.py
utils/: README.md  helpers.py  validation.py
(+1 files in other folders)
